# paste

./: Cargo.toml  README.md
src/: lib.rs  segment.rs
tests/: test_attr.rs  test_doc.rs  test_expr.rs  test_item.rs
