[package]
name = "affix"
version = "0.1.1"
authors = ["David Tolnay <dtolnay@gmail.com>", "James Prestwich <james@prestwi.ch>"]
edition = "2018"
rust-version = "1.31"
license = "MIT OR Apache-2.0"
description = "Macros for all your token pasting needs. Fork of https://github.com/dtolnay/paste with casing fixed"
repository = "https://github.com/prestwich/affix"
readme = "README.md"

[lib]
proc-macro = true

[dev-dependencies]
paste-test-suite = { version = "0", path = "tests/macros" }
rustversion = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
convert_case = "0.5.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
